[VARKA] Move Class-File assembly into catalyst on a Java 25 baseline
Bump java.version to 25 so the whole reactor (including catalyst) can use
java.lang.classfile. VarkaClassFileGen.assembleKernelClass now assembles the
invokestatic probe in catalyst; the catalyst test verifies the bytecode shape
via a Java helper (scalac 2.13 hits a cyclic-reference bug on the sealed
instruction hierarchy). The engine test narrows to define-and-run integration
plus a reflection-based descriptor cross-check.